--- a/css/app.css
+++ b/css/app.css
@@ -137,25 +137,5 @@ span.logo-right {
 
 /* line 117, ../scss/_custom.scss */
 footer {
-  margin-top: 20px !important;
-  background: #3C60B3;
-  border-radius: 0px 0px 10px 10px;
-  -moz-border-radius: 0px 0px 10px 10px;
-  -webkit-border-radius: 0px 0px 10px 10px;
-  overflow: hidden;
-  height: 4.5em;
-  margin-left: 0;
-  margin-right: 0;
-}
-
-/* line 129, ../scss/_custom.scss */
-footer .content {
-  padding: 0 !important;
-  text-align: center;
-  vertical-align: middle;
-  margin-top: 20px;
-  font-family: 'Open Sans', sans-serif !important;
-  font-weight: 800 !important;
-  font-size: 0.9rem;
-  color: #FFDF00 !important;
+  margin-bottom: 20px !important;
 }
