--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -115,24 +115,5 @@ span.logo-right {
 }
 
 footer {
-  margin-top: 20px !important;
-  background: $nav-bar-color;
-  border-radius: 0px 0px 10px 10px;
-  -moz-border-radius: 0px 0px 10px 10px;
-  -webkit-border-radius: 0px 0px 10px 10px;
-  overflow: hidden;
-  height: 4.5em;
-  margin-left: 0;
-  margin-right: 0;
-}
-
-footer .content {
-  padding: 0 !important;
-  text-align: center;
-  vertical-align: middle;
-  margin-top: 20px;
-  font-family: 'Open Sans', sans-serif !important;
-  font-weight: 800 !important;
-  font-size: 0.9rem;
-  color: $logo-color-2 !important;
+  margin-bottom: 20px !important;
 }
