--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -124,7 +124,8 @@ $primary-color: #923b30;
 // $info-color: #a0d3e8;
 $logo-color: #204CB2;
 $logo-color-2: #FFDF00;
-$nav-bar-color: #3C60B3;
+$nav-bar-color: #D8B98D;
+$nav-bar-color-trans: rgba(60, 96, 180, 0.54);
 $overlay-color: #FCE437;
 $bg-primary-color: #ececec;
 $bg-secondary-color: #cdcdcd;
