--- a/scss/app-new.scss
+++ b/scss/app-new.scss
@@ -36,13 +36,12 @@ jwc-layout-header {
     @include desktop() {
         background-color: $bg-secondary-color;
     }
-
 }
 
 ul.simple-list {
     display: inline-block;
     margin: 3em 2em 1em 31em;
-    width:100%;
+    width: 100%;
     @include smartphone() {
         margin: 2em 0;
         padding-left: 0em;
@@ -85,6 +84,26 @@ ul.simple-list li jwc-project-card .container {
 
 .about-page #container jwc-user-profile .container {
     max-width: none;
+}
+
+.blog-list #container-blog {
+    background-color: #ececec;
+
+    ul.simple-list {
+        margin: 3em 2em 1em 0em;
+    }
+
+    .simple-list-item {
+        margin: 4em auto;
+        width: 600px;
+        cursor: pointer;
+        padding: 1rem;
+        // background-color: #f0e6e6;
+
+        -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+        box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+    }
+
 }
 
 jwc-layout-footer {
